fix: Update title

--- a/notebooks/gender/notebook.qmd
+++ b/notebooks/gender/notebook.qmd
@@ -463,7 +463,7 @@ actually appearing in the notebook.
 ```{ojs}
 // This cell is to contain all the headings and the notebook title
 nbTitle = _lang({
-  en: "This is a template to build Atlas notebooks",
+  en: "Gender Hotspots in Agri-food Systems",
   fr: "Ceci est un modèle pour construire des notebooks Atlas",
 });
 // key_insights = _lang({en: "Key Insights", fr: "Résumé"})
