feat(genderNB): Add download buttons

--- a/notebooks/gender/notebook.qmd
+++ b/notebooks/gender/notebook.qmd
@@ -11,6 +11,7 @@ date-edited: today
 import { atlasHero } from "/helpers/uiComponents.ojs";
 import { atlasTOC } from "/helpers/toc.ojs";
 import { getAdminBoundaries } from "/components/_atlasBoundaries.ojs";
+import { downloadButton } from "/helpers/uiComponents.ojs";
 import {
   admin01Form,
   admin0Select,
@@ -128,6 +129,8 @@ viewof numHotspots = Inputs.range([1, 10], { label: "Number of Hotspots", step: 
   });
 }
 
+downloadButton(hotspotData, "AAAA_GenderHotspotData", "Download Hotspot Data");
+
 generateHotspotInsight(hotspotData, numHotspots);
 ```
 
@@ -223,6 +226,8 @@ exposure_groups;
   });
 }
 
+downloadButton(exposure_groups, "AAAA_HazardExposure_usd2015", "Download Data");
+
 generateExposureText(
   exposure_groups,
   prod_type,
@@ -299,9 +304,9 @@ admin01Form(true);
   });
 }
 
-generateAgriWorkInsight(womenInAgri, numHotspots);
+downloadButton(womenInAgri, "AAAA_womenInAgri", "Download Data");
 
-womenInAgri
+generateAgriWorkInsight(womenInAgri, numHotspots);
 ```
 
 # `{ojs} heading4` {#example-heading4}
@@ -391,7 +396,7 @@ viewof femiVar = Inputs.select(
   });
 }
 
-femi;
+downloadButton(femi, "AAAA_femaleEmpowermentIndex", "Download Data");
 
 generateEmpowermentInsight(femi, numHotspots);
 ```
