refactor: convert s3AccessMap and s3BivariateMap to creation functions.

--- a/notebooks/cis/_cis_implementation.qmd
+++ b/notebooks/cis/_cis_implementation.qmd
@@ -633,14 +633,14 @@ s3MapDisplay = {
   if (s3ViewType !== "map") return null;
   
   if (s3MapType === "univariate") {
-    return s3AccessMap;
+    return createS3AccessMap();
   } else {
-    return s3BivariateMap;
+    return createS3BivariateMap();
   }
 }
 
 // Access Map (Univariate)
-s3AccessMap = {
+function createS3AccessMap() {
   const height = 610;
   const width = 775;
   const padding = 20;
@@ -708,7 +708,7 @@ s3AccessMap = {
 
 
 // Section 3 bivariate map with diamond legend (matching Section 2 style)
-s3BivariateMap = {
+function createS3BivariateMap() {
   if (s3ViewType !== "map") return null;
   
   const height = 610;
